@@ -1,9 +1,6 @@
 package imrcp.system;
 
-import imrcp.BaseBlock;
-import imrcp.FileCache;
-import java.sql.Connection;
-import java.util.AbstractMap.SimpleEntry;
+import imrcp.store.FileCache;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -13,101 +10,130 @@ import java.util.List;
 import java.util.SimpleTimeZone;
 import java.util.TimeZone;
 import java.util.concurrent.atomic.AtomicInteger;
-import javax.naming.Context;
-import javax.naming.InitialContext;
 import javax.servlet.ServletConfig;
 import javax.servlet.http.HttpServlet;
-import javax.sql.DataSource;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import imrcp.ImrcpBlock;
+import java.io.BufferedInputStream;
+import java.io.BufferedOutputStream;
+import java.io.DataOutputStream;
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.security.SecureRandom;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 
 /**
- * This singleton class acts as a Directory for the system. ImrcpBlocks that are
- using in the system register to the Directory. When an BaseBlock is no
- longer in use, the block will unregister from the Directory. It extends
- HttpServlet and initializes the system.
+ * The Directory is the main system component that initializes the system by
+ * identifying and managing BaseBlocks and services available within the system.
+ * @author Federal Highway Administration
  */
 public class Directory extends HttpServlet implements Runnable, Comparator<ImrcpBlock>
 {
-
 	/**
-	 * Singleton instance of Directory
+	 * Singleton instance of the Directory
 	 */
 	private static Directory g_oDirectory;
 
+	
 	/**
-	 * Counter variable used for registration Ids
+	 * Used to get sequential ids asynchronously for BaseBlocks
 	 */
 	private static AtomicInteger m_nIdCount = new AtomicInteger();
 
+	
 	/**
-	 * List of all of the Registered Blocks
+	 * List used to register and store all of the active system components
 	 */
 	private final ArrayList<RegisteredBlock> m_oRegistered = new ArrayList();
 
-
+	
 	/**
-	 * Logger
+	 * Log4J logger object
 	 */
 	private Logger m_oLogger = LogManager.getLogger(Directory.class);
 
+	
 	/**
-	 * UTC time znoe
+	 * TimeZone object for UTC
 	 */
 	public static final SimpleTimeZone m_oUTC = new SimpleTimeZone(0, "");
 
+	
 	/**
-	 * Central time zone
+	 * TimeZone object for CST6CDT
 	 */
 	public static final TimeZone m_oCST6CDT = TimeZone.getTimeZone("CST6CDT");
-
+	
+	
 	/**
-	 * DataSource for the database
+	 * Convenience search object
 	 */
-	private DataSource m_iDatasource;
+	private RegisteredBlock m_oSearch = new RegisteredBlock(-1, new SearchBlock(-1));
 	
-	private int m_nMonitorLimit = 120;
 	
-	private RegisteredBlock m_oSearch = new RegisteredBlock(-1, new SearchBlock(-1), 0L);
-	
+	/**
+	 * Maps contributor ids to a preference value. Lower values are more preferred
+	 */
 	private HashMap<Integer, Integer> m_oContribPrefMap;
 	
-	private ArrayDeque<Startup> m_oStartups = new ArrayDeque();
-
-
+	
 	/**
-	 * Default constructor. Looks up the jdbc context.
+	 * Maps contributor ids to a preference value for precipitation rates
+	 */
+	private HashMap<Integer, Integer> m_oPrecipPrefMap;
+	
+	
+	/**
+	 * Queue used to start all of the system components
+	 */
+	private ArrayDeque<Startup> m_oStartups = new ArrayDeque();
+	
+	
+	/**
+	 * Random 16 byte hex string used to identify this instance of IMRCP
+	 */
+	private String m_sImrcpCode;
+	
+	
+	/**
+	 * Random 16 byte hex string used to identify a remote instance of IMRCP
+	 */
+	private String m_sRemoteCode;
+	
+	
+	/**
+	 * Contains all of the instance names of BaseBlock instantiated by the 
+	 * servlet container manager that other blocks are dependent on.
+	 */
+	private final ArrayList<String> m_oDependentServlets = new ArrayList();
+
+	
+	/**
+	 * Default constructor. Sets the singleton instance to this.
 	 */
 	public Directory()
 	{
 		g_oDirectory = this;
-		try
-		{
-			Context oCtx = new InitialContext();
-			m_iDatasource = (DataSource) oCtx.lookup("java:/comp/env/jdbc/imrcp");
-		}
-		catch (Exception oException)
-		{
-			m_oLogger.error(oException, oException);
-		}
 	}
 
-
+	
 	/**
-	 * This method returns a reference to the singleton instance of Directory
-	 *
-	 * @return singleton reference of Directory
+	 * Get the singleton Directory instance
+	 * @return singleton Directory instance
 	 */
 	public static Directory getInstance()
 	{
 		return g_oDirectory;
 	}
 
-
+	
 	/**
-	 * This method is called when the Servlet is initialized. It loads all of
-	 * the classes specified in the Configuration File.
+	 * Initializes the Directory. This should be the first thing that happens at
+	 * system start up. It sets up all of the BaseBlocks and handles starting
+	 * their services.
 	 */
 	@Override
 	public void init()
@@ -115,7 +141,38 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		try
 		{
 			m_oLogger.info("Starting init()");
+			SecureRandom oRng = new SecureRandom();
+			byte[] yBytes = new byte[16];
+			oRng.nextBytes(yBytes);
+			m_sImrcpCode = Text.toHexString(yBytes);
 			ServletConfig oServletConfig = getServletConfig();
+			String sRemoteUrl = oServletConfig.getInitParameter("remote-url");
+			if (sRemoteUrl != null) // if there is a configured remote instance of IMRCP
+			{
+				URL oUrl = new URL(sRemoteUrl); // send a POST request
+				HttpURLConnection oConn = (HttpURLConnection)oUrl.openConnection();
+				oConn.setRequestMethod("POST");
+				oConn.setDoOutput(true);
+
+				try (DataOutputStream oOut = new DataOutputStream(new BufferedOutputStream(oConn.getOutputStream()))) // that contains this instance's ImrcpCode
+				{
+					oOut.writeBytes("remote=" + m_sImrcpCode);
+				}
+
+				int nResCode = oConn.getResponseCode();
+				if (nResCode == HttpURLConnection.HTTP_OK)
+				{
+					try (BufferedInputStream oIn = new BufferedInputStream(oConn.getInputStream())) // get the remote instance's ImrcpCode
+					{
+						int nByte;
+						StringBuilder sBuf = new StringBuilder();
+						while ((nByte = oIn.read()) >= 0)
+							sBuf.append((char)nByte);
+						
+						m_sRemoteCode = sBuf.toString();
+					}
+				}
+			}
 			Config oConfig = new Config(oServletConfig.getInitParameter("config-file"));
 			Scheduling.getInstance(); // create the Scheduling singleton
 			oConfig.setSchedule();
@@ -123,17 +180,28 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 			String[] sContribPreferences = oConfig.getStringArray(getClass().getName(), "Directory", "prefer", null);
 			for (String sContrib : sContribPreferences)
 				m_oContribPrefMap.put(Integer.valueOf(sContrib, 36), oConfig.getInt(getClass().getName(), "Directory", sContrib, 0));
+			m_oPrecipPrefMap = new HashMap();
+			sContribPreferences = oConfig.getStringArray(getClass().getName(), "Directory", "precipprefer", null);
+			for (String sContrib : sContribPreferences)
+				m_oPrecipPrefMap.put(Integer.valueOf(sContrib, 36), oConfig.getInt(getClass().getName(), "Directory", sContrib + "_precip", 0));
 			String[] sClasses = oConfig.getStringArray(getClass().getName(), "Directory", "classes", null); //get the array of classes that need to be initialized upon system startup
-			m_nMonitorLimit = oConfig.getInt(getClass().getName(), "Directory", "monlim", 120);
 			for (int i = 0; i < sClasses.length; i++) //iterate through the strings
 			{
 				String sClassName = sClasses[i++]; // increment here because the classes configuration contains pairs: java class name, instance name
 				if (sClassName.startsWith("#")) // allows for "comments" in the json array
 					continue;
+				if (sClassName.startsWith("@"))
+				{
+					synchronized (m_oDependentServlets)
+					{
+						m_oDependentServlets.add(sClasses[i]);
+					}
+					continue;
+				}
 				BaseBlock oBlock = null;
 				try
 				{
-					oBlock = (BaseBlock)Class.forName(sClassName).newInstance();
+					oBlock = (BaseBlock)Class.forName(sClassName).getDeclaredConstructor().newInstance();
 					oBlock.setName(sClasses[i]);
 					oBlock.init();
 					oBlock.register();
@@ -161,6 +229,11 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		}
 	}
 
+	
+	/**
+	 * Executes the last {@link Startup} in {@link #m_oStartups} if there are any
+	 * Startups in the queue
+	 */
 	@Override
 	public void run()
 	{
@@ -175,6 +248,12 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		}
 	}
 	
+	
+	/**
+	 * Adds the given Startup to the queue and calls {@link Scheduling#execute(java.lang.Runnable)}
+	 * on this(the Directory)
+	 * @param oStartup Startup wrapping a BaseBlock that needs to be started
+	 */
 	private void queueStartup(Startup oStartup)
 	{
 		synchronized (m_oStartups)
@@ -187,18 +266,12 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 	
 	
 	/**
-	 * This method allows an BaseBlock to register with the system. Part of
- registering is attaching to already registered ImrcpBlocks that have an
- interface that is an instance of the registering block. Already
- registered ImrcpBlocks also will attach to the registering block if the
- registering block has an interface that is an instance of the registered
- block. The term instance refers to the name an BaseBlock wants to attach
- to. The term interface refers to the name an BaseBlock has that other
- ImrcpBlocks are looking for.
-	 *
-	 * @param oBlock the BaseBlock that is being registered
-	 * @param sInstances a list of all the instance names it needs to attach to
-	 * @return the registration Id
+	 * Registers the given ImrcpBlock with the given instance name dependencies.
+	 * @param oBlock The ImrcpBlock to reegister
+	 * @param sDependencies contains the instance names of the ImrcpBlocks {@code oBlock}
+	 * is dependent on
+	 * @return the registration id assigned to the ImrcpBlock, -1 if a block with
+	 * {@code oBlock}'s instance name is already registered
 	 */
 	public synchronized int register(ImrcpBlock oBlock, String[] sDependencies)
 	{
@@ -209,7 +282,7 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 			if (nIndex >= 0) // a block with the same name has already been registered
 				return -1;
 
-			RegisteredBlock oNew = new RegisteredBlock(m_nIdCount.incrementAndGet(), oBlock, System.currentTimeMillis());
+			RegisteredBlock oNew = new RegisteredBlock(m_nIdCount.incrementAndGet(), oBlock);
 			m_oLogger.info("Registering " + oNew.m_oBlock.getName() + " to Directory");
 			for (RegisteredBlock oRegistered : m_oRegistered) //see if this block needs to be attached to each registered block or if each registered block needs to attach to it based off of the two block's interfaces and instances
 			{
@@ -233,6 +306,15 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 			}
 
 			m_oRegistered.add(~nIndex, oNew); //add the Block to the list of registered blocks sorted by name
+			synchronized (m_oDependentServlets)
+			{
+				nIndex = m_oDependentServlets.size();
+				while (nIndex-- > 0)
+				{
+					if (m_oDependentServlets.get(nIndex).compareTo(oNew.m_oBlock.getName()) == 0)
+						m_oDependentServlets.remove(nIndex);
+				}
+			}
 			m_oLogger.info(oNew.m_oBlock.getName() + " registered");
 		}
 		catch (Exception oException)
@@ -243,9 +325,14 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 	}
 
 	
+	/**
+	 * Sends the given notification message to the BaseBlocks that are subscribed
+	 * to the BaseBlock the message is from
+	 * @param sMessage notification message in the format [BaseBlock message is from, message name, {@literal <resources>...}]
+	 */
 	public void notifyBlocks(String[] sMessage)
 	{
-		if (sMessage[ImrcpBlock.MESSAGE].compareTo("service started") == 0)
+		if (sMessage[ImrcpBlock.MESSAGE].compareTo("service started") == 0) // special service started case
 		{
 			notifyStart(sMessage);
 			return;
@@ -253,14 +340,14 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		
 		synchronized (this)
 		{
-			for (RegisteredBlock oBlock : m_oRegistered)
+			for (RegisteredBlock oBlock : m_oRegistered) // find the block the message is from
 			{
 				if (oBlock.m_oBlock.getName().compareTo(sMessage[ImrcpBlock.FROM]) == 0)
 				{
-					for (RegisteredBlock oSubscriber : oBlock.m_oSubscribers)
+					for (RegisteredBlock oSubscriber : oBlock.m_oSubscribers) // for each subscribed block
 					{
 						m_oLogger.info(sMessage[ImrcpBlock.FROM] + " notified " + oSubscriber.m_oBlock.getName() + " with message " + sMessage[ImrcpBlock.MESSAGE]);
-						oSubscriber.m_oBlock.receive(sMessage);
+						oSubscriber.m_oBlock.receive(sMessage); // send the message to that block
 					}
 				}
 			}
@@ -268,6 +355,11 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 	}
 	
 	
+	/**
+	 * Queues the subscribers of the BaseBlock the "service started" message is from
+	 * to start their service
+	 * @param sMessage [BaseBlock message is from, "service started"]
+	 */
 	public synchronized void notifyStart(String[] sMessage)
 	{
 		for (RegisteredBlock oBlock : m_oRegistered)
@@ -282,10 +374,10 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		}
 	}
 
-
+	
 	/**
-	 * This method stops the Directory service which shuts down the entire
-	 * system.
+	 * Called when the system is being shut down. Calls {@link HttpServlet#destroy()}
+	 * for each RegisteredBlock, clears {@link #m_oRegistered} and calls {@link Scheduling#stop()}
 	 */
 	@Override
 	public void destroy()
@@ -311,30 +403,13 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 	}
 
 	
-//	public synchronized void registerStateChange(String sName, int nState, long lTime)
-//	{
-//		m_oSearch.m_oBlock.setName(sName);
-//		int nIndex = Collections.binarySearch(m_oRegistered, m_oSearch);
-//		if (nIndex >= 0)
-//		{
-//			RegisteredBlock oTemp = m_oRegistered.get(nIndex);
-//			if (oTemp.m_oMonitor.size() == m_nMonitorLimit)
-//				oTemp.m_oMonitor.removeLast();
-//				
-//			oTemp.m_oMonitor.addFirst(new SimpleEntry(lTime, nState));
-//		}
-//	}
-//	
-//	public synchronized void getMonitoring(ArrayList<ArrayDeque<SimpleEntry<Long, Integer>>> oMonitorDeques, ArrayList<String> oBlockNames)
-//	{
-//		for (RegisteredBlock oBlock : m_oRegistered)
-//		{
-//			oMonitorDeques.add(oBlock.m_oMonitor);
-//			oBlockNames.add(oBlock.m_oBlock.getName());
-//		}
-//	}
-	
-	
+	/**
+	 * Gets the preference value for the given IMRCP contributor id.
+	 * 
+	 * @param nContribId IMRCP contributor id
+	 * @return Preference value associated with the contributor id. Lower values
+	 * are more preferred.
+	 */
 	public int getContribPreference(int nContribId)
 	{
 		Integer nPref = m_oContribPrefMap.get(nContribId);
@@ -343,15 +418,32 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		
 		return nPref;
 	}
-
-
+	
+	
 	/**
-	 * Finds and returns a reference to the registered BaseBlock with the given
- instance name.
-	 *
-	 * @param sName name of the desired block
-	 * @return reference to the desired BaseBlock or null if it couldn't be
- found
+	 * Gets the preference value for the given IMRCP contributor id for precipitation
+	 * rates.
+	 * 
+	 * @param nContribId IMRCP contributor id
+	 * @return Preference value associated with the contributor id for precipitation
+	 * rates. Lower values are more preferred.
+	 */
+	public int getPrecipPreference(int nContribId)
+	{
+		Integer nPref = m_oPrecipPrefMap.get(nContribId);
+		if (nPref == null)
+			return Integer.MAX_VALUE - 1;
+		
+		return nPref;
+	}
+
+	
+	/**
+	 * Gets the instance of the registered ImrcpBlock with the given instance 
+	 * name.
+	 * @param sName instance name to lookup in {@link #m_oRegistered}
+	 * @return Instance of the registered ImrcpBlock with the instance name if
+	 * it exists, otherwise null.
 	 */
 	public synchronized ImrcpBlock lookup(String sName)
 	{
@@ -371,14 +463,14 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		}
 	}
 
-
+	
 	/**
-	 * Searches through the registered ImrcpBlocks to return a List filled with
-	 * the Stores that contain Obs of the given obs type id.
-	 *
-	 * @param nType integer obs type id
-	 * @return a List filled with the Stores that contain Obs of the given obs
-	 * type id
+	 * Gets a List of all the data stores that provide data for the given 
+	 * observation type.
+	 * 
+	 * @param nType IMRCP Observation type id to search for
+	 * @return A List of all the data stores taht provde data for the observation
+	 * type
 	 */
 	public synchronized List<BaseBlock> getStoresByObs(int nType)
 	{
@@ -402,63 +494,104 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		return oReturn;
 	}
 
-
+	
 	/**
-	 * Returns a connection to the database
-	 *
-	 * @return Connection to the database
-	 * @throws Exception
+	 * Get this IMRCP instance's ImrcpCode
+	 * @return the ImrcpCode of this instance of IMRCP
 	 */
-	public Connection getConnection() throws Exception
+	public String getImrcpCode()
 	{
-		return m_iDatasource.getConnection();
+		return m_sImrcpCode;
 	}
-
-
+	
+	
+	/**
+	 * Get the configured remote IMRCP instance's ImrcpCode
+	 * @return the ImrcpCode of the configured remote instance of IMRCP
+	 */
+	public String getRemoteCode()
+	{
+		return m_sRemoteCode;
+	}
+	
+	
+	/**
+	 * 
+	 * @param oReq
+	 * @param oRes
+	 * @throws IOException 
+	 */
+	@Override
+	public void doPost(HttpServletRequest oReq, HttpServletResponse oRes)
+		throws IOException
+	{
+		String sRemote = oReq.getParameter("remote");
+		if (sRemote != null)
+			m_sRemoteCode = sRemote;
+		
+		try (PrintWriter oOut = oRes.getWriter())
+		{
+			oOut.append(m_sImrcpCode);
+		}
+	}
+	
+	
+	/**
+	 * Compares ImrcpBlocks by instance name
+	 */
 	@Override
 	public int compare(ImrcpBlock o1, ImrcpBlock o2)
 	{
 		return o1.getName().compareTo(o2.getName());
 	}
 
+	
 	/**
-	 * Inner class used to keep track of ImrcpBlocks that are registered along
- with their instances so the BaseBlock can easily attach to other
- ImrcpBlocks
+	 * This object is what gets registered into the Directory representing all 
+	 * of the active system components.
 	 */
 	public class RegisteredBlock implements Comparable<RegisteredBlock>
 	{
 		/**
-		 * Registration Id
+		 * Registration id
 		 */
 		private int m_nRegId;
 
+		
 		/**
-		 * The registered BaseBlock
+		 * The ImrcpBlock that is registered
 		 */
 		private ImrcpBlock m_oBlock;
 		
+		
+		/**
+		 * Contains references to the RegisteredBlocks that are subscribed to
+		 * this RegisteredBlock
+		 */
 		private ArrayList<RegisteredBlock> m_oSubscribers = new ArrayList();
 		
+		
+		/**
+		 * Contains references to the RegisteredBlocks that this RegisteredBlock
+		 * is dependent on
+		 */
 		private ArrayList<RegisteredBlock> m_oDependencies = new ArrayList();
 
-
+		
 		/**
-		 * Default constructor.
+		 * Default constructor. Does nothing.
 		 */
 		RegisteredBlock()
 		{
 		}
 
-
+		
 		/**
-		 * Custom constructor. Sets all member variables.
-		 *
-		 * @param nRegId registration Id
-		 * @param oBlock BaseBlock that is registered
-		 * @param sInstances the BaseBlock's instance filters
+		 * Constructs a RegisteredBlock with the given id and ImrcpBlock.
+		 * @param nRegId registration id
+		 * @param oBlock ImrcpBlock being registered
 		 */
-		RegisteredBlock(int nRegId, ImrcpBlock oBlock, long lStartTime)
+		RegisteredBlock(int nRegId, ImrcpBlock oBlock)
 		{
 			m_nRegId = nRegId;
 			m_oBlock = oBlock;
@@ -466,11 +599,7 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 
 
 		/**
-		 * Allows BlockFilters to be compared by their block's Id
-		 *
-		 * @param oFilter the BlockFilter that is compared to this
-		 * @return 0 if the Ids are equal, a non zero number if the Ids are not
-		 * equal
+		 * Compares RegisteredBlocks by instance name of their BaseBlock
 		 */
 		@Override
 		public int compareTo(RegisteredBlock oBlock)
@@ -479,15 +608,24 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 		}
 	}
 
+	
 	/**
-	 * Inner class used to start the services of the ImrcpBlocks. Implements
-	 * Runnable so the thread pool can execute them in parallel
+	 * Delegate object used at system start up to aid with starting the services 
+	 * all of the registered BaseBlocks asynchronously.
 	 */
 	private class Startup implements Runnable
 	{
+		/**
+		 * The RegisteredBlock that gets its service started by this delegate
+		 */
 		RegisteredBlock m_oRegisteredBlock;
 
-
+		
+		/**
+		 * Constructs a Startup with the given RegisteredBlock
+		 * @param oBlock the RegisteredBlock that's service will be started by
+		 * this Startup
+		 */
 		Startup(RegisteredBlock oBlock)
 		{
 			m_oRegisteredBlock = oBlock;
@@ -495,7 +633,9 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 
 
 		/**
-		 * Calls the ImrcpBlocks startService method
+		 * Determines if the RegisteredBlock is ready to have {@link BaseBlock#startService()}
+		 * called by checking if its status is {@link ImrcpBlock#INIT} and all of 
+		 * the BaseBlocks it is dependent on have finished starting their service.
 		 */
 		@Override
 		public void run()
@@ -511,17 +651,42 @@ public class Directory extends HttpServlet implements Runnable, Comparator<Imrcp
 				if (nStatus == ImrcpBlock.INIT || nStatus == ImrcpBlock.STARTING)
 					bStart = false;
 			}
+			
+			if (bStart)
+			{
+				for (String sSub : m_oRegisteredBlock.m_oBlock.getConfig().getStringArray("subscribe", ""))
+				{
+					synchronized (m_oDependentServlets)
+					{
+						for (String sServlet : m_oDependentServlets)
+						{
+							if (sServlet.compareTo(sSub) == 0)
+							{
+								bStart = false;
+								break;
+							}
+						}
+					}
+					if (!bStart)
+						break;
+				}
+			}	
 
 			if (bStart)
 				((BaseBlock)m_oRegisteredBlock.m_oBlock).startService();
 		}
 	}
 
+	
 	/**
-	 * Inner class used to search for ImrcpBlocks by Id
+	 * BaseBlock is abstract so need an implementation that can be used for searching
 	 */
 	private class SearchBlock extends BaseBlock
 	{
+		/**
+		 * Constructs a SearchBlock with the given id.
+		 * @param nId id of the SearchBlock
+		 */
 		SearchBlock(int nId)
 		{
 			m_nId = nId;
